--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,10 +23,10 @@ spring.jpa.open-in-view=false
 logging.level.org.springframework.security=debug
 
 #image
-#project.image=images/
-#spring.servlet.multipart.enabled=true
-#spring.servlet.multipart.max-file-size=10MB
-#spring.servlet.multipart.max-request-size=10MB
+project.image=images/
+spring.servlet.multipart.enabled=true
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
 
 #JWT Security Key
 jwt_secret=cl$ksc^nas%lkdm!cz@xclk#as&dmka;s28*392da%jskd#n9827@3498%
